<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="alex.rps.DuelFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayoutR"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/linearLayout2"
        android:elevation="2dp"
        android:layout_toEndOf="@+id/linearLayout2"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutP"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp"
        android:layout_alignTop="@+id/linearLayoutR"
        android:layout_toLeftOf="@+id/linearLayoutS"
        android:elevation="2dp"
        android:layout_toStartOf="@+id/linearLayoutS"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutS"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayoutP"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:background="@drawable/rounded"
        android:clickable="true"
        android:elevation="2dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPistol"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/linearLayoutR"
        android:layout_marginLeft="102dp"
        android:layout_marginStart="102dp"
        android:background="@drawable/rounded"
        android:clickable="false"
        android:elevation="2dp"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMyScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_score"
            android:textColor="@color/colorTextMenu"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorTextMenu"
            android:text="@string/colon"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewScoreOfOpponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorTextMenu"
            android:text="@string/score_of_opponent"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:layout_toEndOf="@+id/linearLayoutPistol"
        android:layout_toRightOf="@+id/linearLayoutPistol"
        android:text="@string/opponent_chooses"
        android:textColor="@color/colorTextMenu"
        android:textSize="24dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutR"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="e"
        android:visibility="invisible" />

</RelativeLayout>
